Add examples to future features & utility

--- a/utility.html
+++ b/utility.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Utilities</title>
+    <script type="module" src="./js/z_futurefeatures.js"></script>
     <link rel="stylesheet" type="text/css" href="css/utility.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono:400" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap" />
@@ -52,6 +53,11 @@
     <h2>Test a Query</h2>
     <form id="create" action="php/testquery.php" method="post">
       <input type="submit" class="create__submit" value="Test Query" />
+    </form>
+
+    <h2>Delete tags from a JPEG</h2>
+    <form id="create">
+      <input id="deletetags" type="file" class="create__submit" value="Delete Tags" />
     </form>
   </body>
 </html>
